--- a/mystyle2.css
+++ b/mystyle2.css
@@ -1,79 +1,37 @@
-ul
-{
-    list-style-type: none;
-    padding: 0; 
-    overflow: hidden;
-
+body {
+    background-image:url("background.jpg");
+    background-size : 1500px;
 }
-li
-{
-	float:left;
-	position:relative;
-	left:550;
-	top:7;
+.container{
+    background-color: grey transparent;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin:20px;
+    position:fixed;
 }
-li a
-{
-    display: block;
-    color: black;
-    padding: 14px 16px;
+#a{
+    font-family: sans-serif;
+    font-size:20px;
     text-decoration: none;
+    padding:17px;
+    color:white;
 }
-li a:hover
-{
-    background-color: pink;
+#a:hover{
+    color:green;
 }
-body
-{
-	background:url("sky.png");
+.container-x {
+    position: relative;
+    top:100px;
+    color: White;
 }
-#b1 
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none;
-}
-#b2 
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none; 
-}
-#b3 
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none;
-}
-#b4 
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none;
-}
-#b5 
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none; 
-}
-#b6
-{
-    background-color:blue;
-	color: white;
-    padding: 10px 16px;
-    text-decoration: none; 
-}
-img
-{
-	position:relative;
-	left:100px;
-	top:-450px;
-	width:300;  
-	height:450px;
+.container{
+    background-color: grey transparent;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin:20px;
+    position:relative;
 }
